--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             const readme = document.createElement('h5')
             readme.innerHTML = `
                 Compute the first n Fibonacci numbers.
-                Please choose an n greater than 5.
+                Please choose n to be greater than 5.
             `
 
             this.root.appendChild(readme)
