--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
             display: flex;
             justify-content: center;
 
+            width: 60%;
+
+            margin-top: 12px;
+
             border: 1px solid #000;
-            box-shadow: 1px 1px 1px 1px #999        }
+            box-shadow: 1px 1px 1px 1px #999
+        }
 
         #numList {
             display: flex;
@@ -89,11 +94,11 @@
             justify-self: center;
             justify-content: center;
 
-            width: 96%;
 
             /*border: 1px solid #000;*/
 
             padding: 10px;
+
 
             /*transition: all .5s linear 0;*/
             /*color: hsl(36,50%,50%);*/
